# ros2_simple_test

./: README.md
blender_test_core/: CMakeLists.txt  my_robot.blend  package.xml
blender_test_core/config/: my_robot_controllers.yaml
blender_test_core/launch/: my_robot.launch.py  my_robot_etalon.launch.py
blender_test_core/meshes/: neck_2_link_visual.stl  neck_link_collision.stl
blender_test_core/rviz/: urdf_config.rviz
blender_test_core/urdf/: macros.xacro  mobile_base.ros2_control.xacro  my_robot.xacro  my_robot_etalon.xacro
my_robot_bringup/: CMakeLists.txt  package.xml
my_robot_bringup/config/: diff_drive_controller.yaml  my_robot_controllers.yaml  ros_gz_bridge.yaml
my_robot_bringup/launch/: my_robot.launch.py
my_robot_description/: package.xml
my_robot_description/meshes/: head_link_collision.stl  head_link_visual.mtl  head_link_visual.stl
my_robot_description/rviz/: urdf_config.rviz
my_robot_description/urdf/: common_properties.xacro  gazebo_plugin.xacro  mobile_base.ros2_control.xacro  mobile_base.xacro
